deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ai-screening-frontend-gke
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ai-screening-frontend
    template:
        metadata:
            labels:
                app: ai-screening-frontend
        spec:
            containers:
                - name: ai-screening-frontend-app
                  # Replace $LOCATION with your Artifact Registry location (e.g., us-west1).
                  # Replace $GCLOUD_PROJECT with your project ID.
                  image: us-east1-docker.pkg.dev/ai-screening/ai-screening-frontend-repo/ai-screening-frontend-gke:latest
                  # This app listens on port 8080 for web traffic by default.
                  ports:
                      - containerPort: 3000
                  resources:
                      requests:
                          memory: '1Gi'
                          cpu: '500m'
                          ephemeral-storage: '1Gi'
                      limits:
                          memory: '1Gi'
                          cpu: '500m'
                          ephemeral-storage: '1Gi'
