service.yaml
# The hello service provides a load-balancing proxy over the hello-app
# pods. By specifying the type as a 'LoadBalancer', Kubernetes Engine will
# create an external HTTP load balancer.
apiVersion: v1
kind: Service
metadata:
    name: ai-screening-frontend
spec:
    type: LoadBalancer
    selector:
        app: ai-screening-frontend
    ports:
        - port: 80
          targetPort: 3000
