basic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: basic-ingress
spec:
    defaultBackend:
        service:
            name: web
            port:
                number: 8080
